# bldc-experiments

./: .gitignore  README.md  bldc_simple.py  bldc_simulation.py  pyproject.toml
