[tool.poetry]
name = "bldc-experiments"
version = "0.1.0"
description = "Experiments with brushless DC motor simulation and control"
authors = ["Faye Terpsichore"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fenics = "^2019.1.0"
seaborn = "^0.13.1"
pyglet = "^2.0.10"
scipy = "^1.12.0"
numpy = "^1.26.3"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
